--- a/python_stack/django/django_intro/Ninja_Gold/apps/app_Ninja/templates/app_Ninja/index.html
+++ b/python_stack/django/django_intro/Ninja_Gold/apps/app_Ninja/templates/app_Ninja/index.html
@@ -29,38 +29,22 @@
                 <div class="column">
                     <h2>Farm</h2>
                     <p>(Earns 10-20 Gold)</p>
-                    <form action="/process_money" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="building" value="farm" />
-                        <input type="submit" class="button" value="Find Gold!" />
-                    </form>
+                    <a href="/process_money/farm" class="button">Find Gold!</a>
                 </div>
                 <div class="column">
                     <h2>Cave</h2>
                     <p>(Earns 5-10 Gold)</p>
-                    <form action="/process_money" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="building" value="cave" />
-                        <input type="submit" class="button" value="Find Gold!" />
-                    </form>
+                    <a href="/process_money/cave" class="button">Find Gold!</a>
                 </div>
                 <div class="column">
                     <h2>House</h2>
                     <p>(Earns 2-5 Gold)</p>
-                    <form action="/process_money" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="building" value="house" />
-                        <input type="submit" class="button" value="Find Gold!" />
-                    </form>
+                    <a href="/process_money/house" class="button">Find Gold!</a>
                 </div>
                 <div class="column">
                     <h2>Casino</h2>
                     <p>(Earn/Lose 0-50 Gold)</p>
-                    <form action="/process_money" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="building" value="casino" />
-                        <input type="submit" class="button" value="Find Gold!" />
-                    </form>
+                    <a href="/process_money/casino" class="button">Find Gold!</a>
                 </div>
                 <!-- three more columns will go here -->
             </div>
@@ -68,22 +52,14 @@
             <div class="endgame won">
                 <div class="movedown">
                     <h1>You {{won_lost}}!</h1>
-                    <form action="/process_money" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="building" value="clear" />
-                        <input type="submit" class="button" value="Start Over" />
-                    </form>
+                    <a href="/process_money/clear" class="button">Start Over!</a>
                 </div>
             </div>
             {% elif won_lost == 'lost' %}
             <div class="endgame lost">
                 <div class="movedown">
                     <h1>You {{won_lost}}!</h1>
-                    <form action="/process_money" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="building" value="clear" />
-                        <input type="submit" class="button" value="Start Over" />
-                    </form>
+                    <a href="/process_money/clear" class="button">Start Over!</a>
                 </div>
             </div>
             {% endif %}
