--- a/python_stack/flask/flask_fundamentals/8_Great_Number_Game/templates/index.html
+++ b/python_stack/flask/flask_fundamentals/8_Great_Number_Game/templates/index.html
@@ -46,6 +46,12 @@
             
         </form>
     </div>
+    <div class="leaderboard">
+        <h1>Leaderboard</h1>
+        {% for leader in leader_list: %}
+        <p>{{leader['name']}} won the game in {{leader['guess']}} guesses.</p>
+        {% endfor %}
+    </div>
 </body>
 
 </html>
