change color theme login_reg (Django)

--- a/python_stack/django/django_full_stack/the_wall_proj/apps/login_reg_app/static/login_reg_app/css/log_reg_styles.css
+++ b/python_stack/django/django_full_stack/the_wall_proj/apps/login_reg_app/static/login_reg_app/css/log_reg_styles.css
@@ -33,7 +33,7 @@ input[type=text], input[type=password] /*, input[type=email]*/ {
 
 
 input[type=text]:focus, input[type=password]:focus /*i, input[type=email]:focus */{
-    background-color: #ddd;
+    background-color: #cae9ff;
     outline: none;
 }
 
@@ -43,7 +43,7 @@ hr {
 }
 
 .registerbtn {
-    background-color: #4CAF50;
+    background-color: #5fa8d3;
     color: white;
     padding: 15px 20px;
     margin: 8px 0;
