updated ngif restful tasks interactive (MEAN)

--- a/mean_stack/angular/DOM/restful_tasks_interactive/tasks/src/app/app.component.html
+++ b/mean_stack/angular/DOM/restful_tasks_interactive/tasks/src/app/app.component.html
@@ -17,7 +17,7 @@
 
   </form>
 </div>
-<div class="footer">
+<div *ngIf="one_task" class="footer">
   <p>{{one_task.title}} - {{one_task.description}}</p>
 </div>
 
