--- a/mean_stack/angular/DOM/rate_my_cakes/public/src/app/app.component.html
+++ b/mean_stack/angular/DOM/rate_my_cakes/public/src/app/app.component.html
@@ -13,7 +13,7 @@
     <div class="top">
         <div class="form">
             <form (submit)=bake()>
-                <h1>Submit a cake to be rated</h1>
+                <h2>Submit a cake to be rated</h2>
                 <div class="row">
                     <label for="full_name">Baker Name:</label>
                     <input type="text" name="full_name" [(ngModel)]="new_cake.full_name">
@@ -35,11 +35,15 @@
           <div class="col-1">
             <div *ngFor="let cake of cakes" class="cake">
               <!-- {{ cake | json }} -->
-                <img src="{{cake['image_url']}}" alt="{{cake['image_url']}}">
-                <app-cake *ngIf="cake" [cake_to_show]="cake" (rating_emitter)="get_rating_from_child($event, cake._id)"></app-cake>
+                <img src="{{cake['image_url']}}" alt="{{cake['image_url']}}" (click)=get_a_cake(cake._id)>
+                <app-rating *ngIf="cake" [cake_to_show]="cake" (rating_emitter)="get_rating_from_child($event, cake._id)"></app-rating>
             </div>
           </div>
         </div>  
+    </div>
+    <div class="bottom">
+      <h3 *ngIf="baker">{{baker.full_name}} baked this cake!</h3>
+      <app-cake *ngIf="one_cake" [one_cake_to_show]="one_cake"></app-cake>
     </div>
 </body>
 </html>
